# EDGEVIEWER

./: README.md  package-lock.json
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt
app/src/main/java/com/example/edgeviewer/camera/: CameraController.kt  FrameAnalyzer.kt  YuvToRgbaConverter.kt
app/src/main/java/com/example/edgeviewer/gl/: EdgeRenderer.kt  EdgeSurfaceView.kt
app/src/main/java/com/example/edgeviewer/nativeproc/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
docs/screenshots/: .gitkeep  README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: README.md  index.html  package-lock.json  package.json
web/src/: frameDisplay.ts  frameLoader.ts  main.ts  types.ts
